<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_weight="1"
            android:hint="@string/enter_name"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/button_animation"
            android:text="@string/search"
            android:textColor="@color/icons" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_load_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
       >

        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/error_msg"
            android:textColor="@color/coloPrimaryText"
            android:textSize="@dimen/mediumText"
            android:visibility="gone" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_albums_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:visibility="visible" />

</LinearLayout>